@@ -1,4 +1,4 @@
-FROM nexus.engageska-portugal.pt/ska-docker/ska-python-buildenv:latest AS buildenv
+FROM nexus.engageska-portugal.pt/ska-tango-images/pytango-builder:9.3.3.3 AS buildenv
 RUN apt-get update && apt-get install gnupg2 -y
 
 COPY requirements-dev.txt ./
