@@ -1,10 +1,11 @@
-FROM nexus.engageska-portugal.pt/ska-docker/ska-python-buildenv:9.3.3.1 AS buildenv
-FROM nexus.engageska-portugal.pt/ska-docker/ska-python-runtime:9.3.3.1 AS runtime
+FROM nexus.engageska-portugal.pt/ska-tango-images/pytango-builder:9.3.3.3 AS buildenv
+FROM nexus.engageska-portugal.pt/ska-tango-images/pytango-runtime:9.3.3.3 AS runtime
 
 # create ipython profile to so that itango doesn't fail if ipython hasn't run yet
 RUN ipython profile create
 ENV PATH=/home/tango/.local/bin:$PATH
-RUN python3 -m pip install --extra-index-url https://nexus.engageska-portugal.pt/repository/pypi/simple -rrequirements.txt -rtesting/requirements.txt .
+RUN python3 -m pip install --extra-index-url https://nexus.engageska-portugal.pt/repository/pypi/simple -rrequirements.txt -rtesting/requirements.txt
 RUN python3 -m pip install pyfabil-1.0-py3-none-any.whl
+RUN python3 -m pip install .
 # RUN python3 -m pip install aavs_system-1.0-py3-none-any.whl
 #CMD ["MccsController", "01"]
