@@ -33,7 +33,7 @@ For a basic environment in which devices may be tested:
    terminal session.
 
        me@local:~$ cd ska-low-mccs
-       me@local:~/ska-low-mccs$ docker run --rm -ti -v `pwd`:/app nexus.engageska-portugal.pt/ska-docker/ska-python-buildenv:latest bash
+       me@local:~/ska-low-mccs$ docker run --rm -ti -v `pwd`:/app nexus.engageska-portugal.pt/ska-tango-images/pytango-builder:9.3.3.3
        root@caa98e8e264d:/app#
 
 4. Install project dependencies:
