@@ -34,9 +34,9 @@ dsconfig:
   # if addition instances are required the need to be defined there
   configuration_file: data/configuration.json
   image:
-      registry: nexus.engageska-portugal.pt/ska-docker
+      registry: nexus.engageska-portugal.pt/ska-tango-images
       image: tango-dsconfig
-      tag: 1.5.0
+      tag: 1.5.0.4
       pullPolicy: IfNotPresent
 
 # Default docker image - used by all of MCCS
